# pydl8.5

./: .coverage  .gitignore  .pyproject.toml  .readthedocs.yml  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  appveyor.yml  circle.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/: all-test-and-publish.yml  publish.yml
.github/workflows/: Linux-test-and-publish.yml  Mac-test-and-publish.yml  Windows-test-and-publish.yml  all-test-and-publish.yml  basic-test-and-upload.yml  publish.yml  test-and-publish.yml  test-and-upload-to-pypi.yml  test-and-upload-to-testpypi.yml  wheels.yml
core/: CMakeCache.txt  CMakeLists.txt  Makefile  argparse.cpp  cmake_install.cmake  dl85  main.cpp
core/src/: cache.cpp  cache.h  cache_hash.cpp  cache_hash.h  cache_hash_cover.cpp  cache_hash_cover.h  cache_hash_itemset.cpp  cache_hash_itemset.h  cache_ltd_trie.cpp  cache_ltd_trie.h  cache_priority.cpp  cache_priority.h  cache_trie.cpp  cache_trie.h  dataBinary.h  dataBinaryPython.cpp  dataHandler.cpp  dataHandler.h  dataManager.cpp  dataManager.h  depthTwoComputer.cpp  depthTwoComputer.h  depthTwoComputer_.cpp  depthTwoNodeData.h  dl85.cpp  dl85.h  experror.h  freq_Solution.cpp  freq_nodedataManager.cpp  freq_nodedataManager.h  globals.cpp  globals.h  lcm_iterative.cpp  lcm_pruned.backup.cpp  lcm_pruned.cpp  lcm_pruned.h  logger.h  node.h  nodeDataManager.cpp  nodeDataManager.h  (+47 more)
cpp/: CMakeLists.txt  main.cpp  main_.cpp  main_loop.cpp
cpp/src/: cache.cpp  cache.h  cache_hash.cpp  cache_hash.h  cache_priority.cpp  cache_priority.h  cache_trie.cpp  cache_trie.h  dataContinuous.cpp  dataManager.cpp  dataManager.h  depthTwoComputer.cpp  depthTwoComputer.h  depthTwoComputer_.cpp  dl85.cpp  dl85.h  freq_Solution.h  freq_nodedataManager.cpp  globals.h  lcm_iterative.h  lcm_pruned.cpp  lcm_pruned.h  query_best.backup.h  query_best.h  query_totalfreq.cpp  query_weighted.backup.cpp  rCover.cpp  rCoverWeighted.cpp  rCoverWeighted.h  solution.cpp  solution.h  trie.cpp
cython_debug/: cython_debug_info_dl85Optimizer  interpreter
cython_extension/: dl85Optimizer.pyx  error_function.pyx  py_support_error_class_function_wrapper.h  py_tid_error_class_function_wrapper.h  py_tid_error_function_wrapper.h
datasets/: breast-wisconsin.txt  dataset.txt  diabetes.txt  gaussian-mixture.txt  hypothyroid.txt  ionosphere.txt  kr-vs-kp.txt  paper_test.txt  pendigits.txt  segment.txt  tic-tac-toe_.txt  yeast.txt  zoo-1.txt
datasets/tests/: paper.txt
dl85/: __init__.py
dl85/classifiers/: classifier.py  classifier_model.py  predictors.py
dl85/datasets/: anneal.txt  german-credit.txt  heart-cleveland.txt  mushroom.txt  tic-tac-toe.txt  vehicle.txt
dl85/errors/: errors.py
dl85/examples/: odt_run.py
dl85/feature_selection/: __init__.py  selector.py
dl85/predictors/: __init__.py  distribution_predictor.py  predictor.py
dl85/unsupervised/: __init__.py  clustering.py
doc/: api.rst  conf.py  index.rst  references.bib  user_guide.rst
doc_generator/: user_guide.rst
docs/: .buildinfo  api.html  index.html  requirements.txt  search.html  searchindex.js
docs/_modules/: index.html
docs/auto_examples/: index.html  plot_ODTClassifier.html
examples/: README.rst  plot_DL85Classifier.py  plot_ODTClassifier.py  plot_boosting.py  plot_boosting_cv.py  plot_classifier_dl85.py  plot_classifier_dl85_plot_tree.py  plot_classifier_export_tree.py  plot_classifier_iterative_c_plus.py  plot_classifier_iterative_python.py  plot_classifier_memory_bounded.py  plot_classifier_user_1.py  plot_classifier_user_2.py  plot_cluster_dl85.py  plot_cluster_user.py  plot_compas.py  plot_dl85_classifier.py  plot_iterative_classifier_c_plus.py  plot_iterative_classifier_python.py  plot_predictor_user.py  plot_predictor_user_2.py  plot_user_classifier_1.py  plot_user_classifier_2.py  plot_user_clustering.py  plot_user_clustering_1.py  utils.py
pydl85/: __init__.py
pydl85/predictors/: __init__.py  predictor.py  predictor_backup3.py
pydl85/unsupervised/: clustering.py
python_library/: .gitignore  .readthedocs.yml  .travis.yml  CHANGES.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  appveyor.yml  circle.yml  pyproject.toml  requirements.txt  setup.py  todo.txt
python_library/.circleci/: config.yml
python_library/cython_extension/: dl85Optimizer.cpp  dl85Optimizer.pyx  error_function.cpp  error_function.h  error_function.pyx  py_tid_error_function_wrapper.h
python_library/datasets/: hepatitis.txt  matchmake.csv  matchmake.txt  matchmaker.csv  paper_.txt  primary-tumor.txt  tic-tac-toe__.txt
python_library/dl85/: __init__.py
python_library/doc/: api.rst  conf.py  index.rst  references.bib  user_guide.rst
python_library/docs/: genindex.html  objects.inv  user_guide.html
python_library/examples/: auc_lp.py  backup_functions.py  boost_auc_view_opti_.py  boost_auc_view_opti_marg.py  boost_auc_view_opti_marg_copy.py  data_variance_cdf.ipynb  iter_file.csv  iter_file_2_150_cart.csv  iter_file_3.csv  iter_file_3_15.csv  model.lp  model1.lp  new.py  new_comp.py  plot_DL85Classifier.py  plot_ODTClassifier.py  plot_adaboost.py  plot_bagging.py  plot_bagging_cv.py  plot_boosting.py  plot_boosting_criterion.py  plot_boosting_cv.py  plot_boosting_cv_ttest.py  plot_classifier_dl85.py  plot_classifier_dl85_plot_tree.py  plot_classifier_dl85_plot_tree_1.py  plot_classifier_iterative_c_plus.py  plot_classifier_iterative_python.py  plot_classifier_user_1.py  plot_classifier_user_2.py  plot_cluster_dl85.py  plot_cluster_user.py  plot_dl85_classifier.py  plot_iterative_classifier_c_plus.py  plot_iterative_classifier_python.py  plot_mdboost_cv.py  plot_predictor_user.py  plot_predictor_user_1.py  plot_predictor_user_2.py  plot_user_classifier_1.py  (+44 more)
python_library/output/: kr-vs-kp_1.txt  match_maker_2_.txt  nist_2.txt
python_library/wrapping/: dl85Optimizer.pyx
tests/: test_DL85Classifier.py  test_DL85Cluster.py  test_DL85Predictor.py
wheelhouse/: pydl8.5-0.1.2-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
wrapping/: dl85Optimizer.pyx
(+158 files in other folders)
